[package]
name = "gebemula"
version = "0.3.0"
authors = ["Bruno Romero de Azevedo <brunodea@inf.ufsm.br>", "Hugo Stefan Kaus Puhlmann <hugopuhlmann@gmail.com>", "Vitor da Silva <vitords.42@gmail.com>", "Yuri Kunde Schlesner <yuriks@yuriks.net>"]

[dependencies]
bitflags = "0.5"
clap = "2.2.2"
time = "0.1"

[dependencies.sdl2]
git = "https://github.com/AngryLawyer/rust-sdl2"
